tests/NormalTests/paczka1/small_fuzzy/30541045.err
Error in line 2: A695 A419 11,6
Error in line 1: pIcjBG1 A695 15,7
Error in line 14: pIcjBG1 A419 209,92
Error in line 15: 2Ugk6G A695 47,23
